<resources>
    <string name="app_name">Real</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cboremember">Remember</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="error_empty">Username can not be blank</string>
    <string name="error_emptyps">Password can not be blank</string>
    <string name="wrong_user_pass">Username or password wrong</string>
    <string name="error_emptyphonelength">Phone numbers must be greater than 9 and less than 12</string>
    <string name="error_passlength">Password must be greater than 6 and less than 50</string>
    <string name="error_emptyphone">Phone can not be blank</string>
    <string name="error_emptyname">Name can not be blank</string>
    <string name="empty_confirmpassword">Confirm password  can not be blank</string>
    <string name="length20">Maximum length is 20</string>
    <string name="length50">Maximum length is 50</string>
    <string name="error_likepw">Confirm password must like as password</string>
    <string name="content">Ss3 :  Driving safely is an important issue which could minimize traffic congestion and traffic accidents when people participate in traffic. Traffic is a difficult problems to solve (sốp) . In Vietnam, these problems are very difficult with the potential (po ten xồ) dangers when participate in traffic. To avoid such dangers and to overcome traffic situation(si tru ây sion), we need to know how to drive safely to protect yourself first and other commuters. Therefore, it is the reason why I choose the topic : Safe driving. In this assignment, I will focus on four main ideas : traffic situation in Vietnam, safe driving and its importance ,safe driving tips and my driving experience.     Ss4 :  As we all know that traffic congestion in Vietnam, (đặcbiệt)especially(ếch pách sồ ly) in some urban(u bừn) areas is an alarming (a lo ming) issue that need handle(hand đồ) as soon as possible. Congestion problems (xảy ra)occur(óc cò) (thường xuyên) frequently (fish quận ly) and unavoidable . Ss5 : From the causes of traffic problems, traffic accident is a matter of (mối quan ngại)concern(cưn sơ). Traffic accidents can cause serious consequences(con so quèn sợt)(hậu quả nghiêm trọng) and it is also the leading cause of serious injury and death in Vietnam.   S6   Safe driving is the actions of driving a vehicle(via cồ) in traffic for the purpose of efficient(ơ fech sion) (sự lưu thông)circulation(sơ cưu lây sion) and avoids the (rắc rối) hassle(hand sồ) and safety when participating traffic. For example speed and distance(dis từn) between vehicles participate in traffic, compliance(com plen) with traffic laws and traffic lights, and drink beer or wine, do not drive. S7 In my opinion, the first reason why I have to drive carefully is safely. Traffic accidents can have serious consequences causing injuries and even death. Secondly, Safe driving help more eco-friendly. And finally, I can make money when driving safely participate traffic. The benefits of safe driving are very important when participating in traffic. S8 :    The first and most important thing when you participate in traffic is compliance with traffic laws and traffic lights. Traffic laws are the laws that you must follow to (đảm bảo) ensure(in sơ) the safety and efficient for traffic between vehicles. S9 : Secondly, everyone should understand and comply with (quy định)regulations (re gu..) on the speed and safety distance between vehicles when entering(bước vào) the traffic. S10 Thirdly, be aware(ờ where) of the harms(hại) of being drunk. And the consequences of drinking beer or wine cause the serious accident. In my opinion, These tips are very effective. When in traffic, I should (chịu đựng) obey  by the traffic laws and traffic lights and I drive, I should pay attention to the speed and distance between vehicles and I will not drive when I drink beer or wine.  S11  Throughout the safe dring tips and the importance of safe driving, I have drawn(rút ra) experience that is to pay attention and very focused when driving.  Firstly, every time I drive, I always obey traffic laws and and follow traffic lights. Secondly, I never work during the time I drive because it is really dangerous to cause accidents.And finally, I never drink wine or beer when I drive because I cannot focus on the route and when I take the taxi or drive a car, I usually wear a seat belt. (sít beo)  S12     Finish my presentation, I want everyone to be aware that how is the traffic situation in Vietnam. accidents and congestions ? And importance of driving safety. And the most important thing about safe driving is keeping safe for you and others when participating in traffic. Not only that, it  help more eco-friendly and you can make money when driving safely. And Lastly, I want people to be aware of the importance of safe driving, good perform and make good habits when participating in traffic.</string>
    <string name="alertsuccessfully">Save Successfully</string>
    <string name="empty">This information cann ot be empty</string>
    <string name="maximum10">Maximum length is 10 characters</string>
    <string name="agemaximum">Maximum age is 10</string>
    <string name="min1">Minimum weight is 1 kq</string>
    <string name="namepet">Name</string>
    <string name="agepet">Age</string>
    <string name="weightpet">Weight</string>
    <string name="malepet">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="pet">Pet</string>
    <string name="finish_plan">You have completed the plan</string>
    <string name="save_error">Save error</string>
    <string name="app_name2">Happy Pets</string>
    <string name="event">Bạn có sự kiện hôm nay</string>
</resources>
