<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PetActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="backpet"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/pet"
                android:textColor="#fff"
                android:textSize="22sp"
                android:layout_marginStart="20dp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgpet"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:hint="@string/namepet" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:layout_marginBottom="5dp"
                    android:id="@+id/sploaipet"
                    android:imeOptions="actionGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/edage"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_height="wrap_content"
                        android:hint="@string/agepet" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/sphealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:layout_marginBottom="7dp" />

                <RadioGroup
                    android:id="@+id/rdgroup"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/malepet" />

                    <RadioButton
                        android:id="@+id/reFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/edweight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:hint="@string/weightpet" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_corner_dark"
                    android:text="@string/save"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="#fff"
        app:itemTextColor="#FFF"
        app:menu="@menu/navi" />
</RelativeLayout>